Update .gitignore to exclude chatmode files and memory-bank
Added entries to `.gitignore` to exclude the following files and
directories from version control:
- `.github/architect.chatmode.md`
- `.github/code.chatmode.md`
- `.github/debug.chatmode.md`
- `.github/ask.chatmode.md`
- `memory-bank`

These changes ensure that temporary, generated, or configuration
files are not tracked in the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,8 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+/.github/architect.chatmode.md
+/.github/code.chatmode.md
+/.github/debug.chatmode.md
+/.github/ask.chatmode.md
+/memory-bank
